--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,7 @@ body {
     color: #000000;
     border-left: 1px solid black;
     padding: 10px;
+    font-weight: bold;
   }
   
   .description {
@@ -18,6 +19,7 @@ body {
   
   .time-block {
     border-radius: 15px;
+    color: white;
   }
   
   .row {
@@ -30,7 +32,7 @@ body {
     border-top: 1px dashed #000000;
   }
   
-  .past {
+  /*.past {
     background-color: #d3d3d3;
     color: white;
   }
@@ -43,7 +45,7 @@ body {
   .future {
     background-color: #77dd77;
     color: white;
-  }
+  }*/
   
   .saveBtn {
     border-left: 1px solid black;
